Improve SplitWisePlus transaction logic and fix test case failures